--- a/src/index.css
+++ b/src/index.css
@@ -1,54 +1,24 @@
 
-@keyframes transicion {
+.scroll {
 
-    
+    height: 30rem;
+    margin: 2rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.prueba {
-    margin: 2rem 10rem;
-    height: 25rem;
-    width: 60vw;
-    background-color: black;
-    border-radius: 20px;
-}
+.slider {
 
-.main1{
-    background-color: green;
-    width: 60vw;
+   background-color: black;
+   border: 5px solid gold;
+   border-radius: 20px;
+
+    width: 90%;
     height: 100%;
 }
 
-.main2{
-    background-color: blue;
-    width: 60vw;
-    height: 100%;
-}
-
-.main3{
-    background-color: red;
-    width: 60vw;
-    height: 100%;
-}
-
-.main4{
-    background-color: yellow;
-    width: 60vw;
-    height: 100vw;
-}
-
-.main5{
-    background-color: aqua;
-    width: 60vw;
-    height: 100vw;
-
-}
-
-.main6{
-    background-color: purple;
-    width: 100vw;
-    height: 100vw;
-
-}
 
 .contenedor {
 
