--- a/src/tarjeta.css
+++ b/src/tarjeta.css
@@ -1,18 +1,17 @@
 
 .main {
-    width: 40vw;
-    padding: 1rem;
+    width: 50vw;
     margin: 1rem;
 
     position: relative;
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-    background-color: black;
-
+    border: 1px solid white;
     border-radius: 20px;
-
+    background-color: black;
     color: white;
+    
 }
 
 .contenedor-foto {
@@ -36,6 +35,7 @@
 
 .nombre {
 
+    padding-top: 5rem;
     text-align: center;
     font-size: 2.5rem;
     position: relative;
